--- a/package.json
+++ b/package.json
@@ -4,6 +4,15 @@
   "description": "Dark-Green",
   "version": "1.1.0",
   "publisher": "Rambo1558",
+  "icon": "logo.jpg",
+  "keywords": [
+    "theme",
+    "dark theme",
+    "dark green",
+    "green",
+    "dark",
+    "taiga"
+  ],
   "engines": {
     "vscode": "^1.81.0"
   },
